--- a/src/Sor/Sor/Sor.csproj
+++ b/src/Sor/Sor/Sor.csproj
@@ -5,7 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="MonoGame.Framework.Portable" Version="3.6.0.1625" />
+        <PackageReference Include="MonoGame.Framework.DesktopGL.Core" Version="3.8.0.1" />
         <PackageReference Include="XNez" Version="0.10.0.5" />
         <PackageReference Include="XNez.Glint" Version="0.2.2" />
     </ItemGroup>
