--- a/src/Sor/SorDk/SorDk.csproj
+++ b/src/Sor/SorDk/SorDk.csproj
@@ -3,10 +3,20 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>netcoreapp3.0</TargetFramework>
+        <MonoGamePlatform>DesktopGL</MonoGamePlatform>
     </PropertyGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\Sor\Sor.csproj" />
+    </ItemGroup>
+    
+    <ItemGroup>
+      <PackageReference Include="MonoGame.Content.Builder" Version="3.7.0.9" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <MonoGameContentReference Include="Content/Content.mgcb" />
+        <None Include="Raw/**/*" CopyToOutputDirectory="PreserveNewest" />
     </ItemGroup>
 
 </Project>
