--- a/src/Sor/SorDk/SorDk.csproj
+++ b/src/Sor/SorDk/SorDk.csproj
@@ -19,12 +19,17 @@
 
     <ItemGroup>
         <Content Include="Data/**/*" CopyToOutputDirectory="PreserveNewest" />
+        <EmbeddedResource Include="Res/**/*" />
     </ItemGroup>
 
     <ItemGroup>
         <EmbeddedResource Include="Icon.ico" />
         <EmbeddedResource Include="Icon.bmp" />
         <EmbeddedResource Include="Icon.png" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Res" />
     </ItemGroup>
 
 </Project>
