--- a/src/Sor/SorDk/SorDk.csproj
+++ b/src/Sor/SorDk/SorDk.csproj
@@ -5,18 +5,11 @@
         <TargetFrameworks>netcoreapp3.0;net472</TargetFrameworks>
         <MonoGamePlatform>DesktopGL</MonoGamePlatform>
     </PropertyGroup>
-
+    
     <PropertyGroup Condition="'$(PackBinary)' == '1'">
-        <!-- pack config -->
         <PublishTrimmed>true</PublishTrimmed>
-    </PropertyGroup>
-    <PropertyGroup Condition="'$(NativePack)' == '1'">
-        <!-- native pack -->
-        <PublishReadyToRun>true</PublishReadyToRun>
+<!--        <PublishReadyToRun>true</PublishReadyToRun>-->
         <PublishReadyToRunShowWarnings>true</PublishReadyToRunShowWarnings>
-    </PropertyGroup>
-    <PropertyGroup Condition="'$(PackBinary)' == '1' AND '$(NativePack)' != '1'">
-        <!-- cross pack -->
         <PublishSingleFile>true</PublishSingleFile>
     </PropertyGroup>
 
