add persistable file saving

--- a/src/Sor/Sor/Sor.csproj
+++ b/src/Sor/Sor/Sor.csproj
@@ -11,6 +11,7 @@
     <ItemGroup>
       <ProjectReference Include="..\..\..\lib\Glint\src\Glint\Glint.csproj" />
       <ProjectReference Include="..\..\..\lib\LunchSimulator\src\Lunchtime\LunchtimeGears\LunchtimeGears.csproj" />
+      <ProjectReference Include="..\..\..\lib\XNez\Nez.Persistence\Nez.Persistence.csproj" />
       <ProjectReference Include="..\..\..\lib\XNez\Nez.Portable\XNez.csproj" />
     </ItemGroup>
 
