build SorDk not Sor

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,7 +9,7 @@
             "type": "shell",
             "args": [
                 "build",
-                "src/Sor/Sor/Sor.csproj",
+                "src/Sor/SorDk/SorDk.csproj",
                 "/property:GenerateFullPaths=true",
                 "/consoleloggerparameters:NoSummary"
             ],
