--- a/src/Sor/Sor/Sor.csproj
+++ b/src/Sor/Sor/Sor.csproj
@@ -10,6 +10,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\..\lib\Glint\src\Glint\Glint.csproj" />
+      <ProjectReference Include="..\..\..\lib\iri.xgoap\Iri.XGOAP\Iri.XGOAP.csproj" />
       <ProjectReference Include="..\..\..\lib\LunchSimulator\src\Lunchtime\LunchtimeGears\LunchtimeGears.csproj" />
       <ProjectReference Include="..\..\..\lib\XNez\Nez.Persistence\Nez.Persistence.csproj" />
       <ProjectReference Include="..\..\..\lib\XNez\Nez.Portable\XNez.csproj" />
