--- a/src/Sor/SorDk/SorDk.csproj
+++ b/src/Sor/SorDk/SorDk.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFrameworks>netcoreapp3.1;net472</TargetFrameworks>
+        <TargetFramework>netcoreapp3.1</TargetFramework>
         <MonoGamePlatform>DesktopGL</MonoGamePlatform>
     </PropertyGroup>
     
