--- a/src/Sor/SorDk/SorDk.Mono.csproj
+++ b/src/Sor/SorDk/SorDk.Mono.csproj
@@ -4,6 +4,7 @@
         <OutputType>Exe</OutputType>
         <TargetFramework>net472</TargetFramework>
         <MonoGamePlatform>DesktopGL</MonoGamePlatform>
+        <AssemblyName>SorDk</AssemblyName>
     </PropertyGroup>
 
     <ItemGroup>
