--- a/src/Sor/SorDk/SorDk.Mono.csproj
+++ b/src/Sor/SorDk/SorDk.Mono.csproj
@@ -5,6 +5,7 @@
         <TargetFramework>net472</TargetFramework>
         <MonoGamePlatform>DesktopGL</MonoGamePlatform>
         <AssemblyName>SorDk</AssemblyName>
+        <RootNamespace>SorDk</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
