update names in config file

--- a/src/Sor/SorDk/Res/game.conf
+++ b/src/Sor/SorDk/Res/game.conf
@@ -4,10 +4,10 @@
 w=960
 h=540
 fullscreen=true
-scaleMode=1
+scale_mode=1
 framerate=60
-maxVfx=true
+max_vfx=true
 
 [platform]
-logLevel=3
-logFile=game.log
+log_level=3
+log_file=game.log
