--- a/src/Sor/SorDk/Res/game.dbg.conf
+++ b/src/Sor/SorDk/Res/game.dbg.conf
@@ -4,15 +4,15 @@
 w=960
 h=540
 scale=1
-fullscreen=false
-scaleMode=0
+fullscreen=true
+scale_mode=0
 framerate=60
-maxVfx=true
+max_vfx=true
 
 [platform]
-logLevel=4
-logFile=game.log 
+log_level=4
+log_file=game.log
 
 [debug]
-clearData=false
+clear_data=false
 cheats=false
