--- a/src/Sor/SorDk/SorDk.csproj
+++ b/src/Sor/SorDk/SorDk.csproj
@@ -31,10 +31,22 @@
         <DefineConstants>$(DefineConstants);CORERT</DefineConstants>
     </PropertyGroup>
 
-    <PropertyGroup Condition="'$(CoreRTMode)' == 'Moderate'">
+    <PropertyGroup Condition="'$(CoreRTMode)' == 'Moderate' or '$(CoreRTMode)' == 'High'">
         <IlcGenerateCompleteTypeMetadata>false</IlcGenerateCompleteTypeMetadata>
         <IlcOptimizationPreference>Size</IlcOptimizationPreference>
     </PropertyGroup>
+
+    <PropertyGroup Condition="'$(CoreRTMode)' == 'High'">
+        <RootAllApplicationAssemblies>false</RootAllApplicationAssemblies>
+        <IlcGenerateStackTraceData>false</IlcGenerateStackTraceData>
+        <IlcInvariantGlobalization>true</IlcInvariantGlobalization>
+        <IlcFoldIdenticalMethodBodies>true</IlcFoldIdenticalMethodBodies>
+    </PropertyGroup>
+
+    <ItemGroup Condition="'$(CoreRTMode)' == 'High'">
+        <IlcArg Include="--removefeature:EventSource" />
+        <IlcArg Include="--removefeature:FrameworkStrings" />
+    </ItemGroup>
 
     <ItemGroup>
         <RdXmlFile Include="rd.xml"/>
