--- a/src/Sor/SorDk/SorDk.csproj
+++ b/src/Sor/SorDk/SorDk.csproj
@@ -2,12 +2,16 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <TargetFrameworks>netcoreapp3.1;net48</TargetFrameworks>
         <MonoGamePlatform>DesktopGL</MonoGamePlatform>
     </PropertyGroup>
 
     <ItemGroup>
         <ProjectReference Include="..\Sor\Sor.csproj"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" PrivateAssets="All" Version="1.0.0" />
     </ItemGroup>
 
     <ItemGroup>
