update refs to use DuckMind

--- a/src/Sor/Sor/Sor.csproj
+++ b/src/Sor/Sor/Sor.csproj
@@ -12,6 +12,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\..\lib\DuckMind\src\DuckMind\DuckMind\DuckMind.csproj" />
       <ProjectReference Include="..\..\..\lib\Glint\src\Glint\Glint.csproj" />
       <ProjectReference Include="..\..\..\lib\XNez\Nez.Portable\XNez.csproj" />
     </ItemGroup>
