--- a/src/Sor/Sor/Sor.csproj
+++ b/src/Sor/Sor/Sor.csproj
@@ -11,7 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\..\lib\DuckMind\src\DuckMind\Ducia\Ducia.csproj" />
+      <ProjectReference Include="..\..\..\lib\DuckMind\src\DuckMind\Ducia.Game\Ducia.Game.csproj" />
       <ProjectReference Include="..\..\..\lib\Glint\src\Glint\Glint.csproj" />
       <ProjectReference Include="..\..\..\lib\XNez\Nez.Portable\XNez.csproj" />
     </ItemGroup>
