--- a/src/Sor/SorDk/SorDk.csproj
+++ b/src/Sor/SorDk/SorDk.csproj
@@ -25,32 +25,19 @@
         <EmbeddedResource Include="Icon.png"/>
     </ItemGroup>
 
-    <!-- Native Compilation Modes -->
+    <!-- CoreRT Support -->
 
-    <ItemGroup Condition="'$(CoreRTMode)' != ''">
+    <ItemGroup Condition="'$(UseCoreRT)' != ''">
         <PackageReference Include="Microsoft.DotNet.ILCompiler" Version="1.0.0-alpha-*"/>
     </ItemGroup>
 
-    <PropertyGroup Condition="'$(CoreRTMode)' != ''">
+    <PropertyGroup Condition="'$(UseCoreRT)' != ''">
         <DefineConstants>$(DefineConstants);CORERT</DefineConstants>
-    </PropertyGroup>
-
-    <PropertyGroup Condition="'$(CoreRTMode)' == 'Moderate' or '$(CoreRTMode)' == 'High'">
         <IlcGenerateCompleteTypeMetadata>false</IlcGenerateCompleteTypeMetadata>
         <IlcOptimizationPreference>Size</IlcOptimizationPreference>
-    </PropertyGroup>
-
-    <PropertyGroup Condition="'$(CoreRTMode)' == 'High'">
-        <RootAllApplicationAssemblies>false</RootAllApplicationAssemblies>
-        <IlcGenerateStackTraceData>false</IlcGenerateStackTraceData>
         <IlcInvariantGlobalization>true</IlcInvariantGlobalization>
         <IlcFoldIdenticalMethodBodies>true</IlcFoldIdenticalMethodBodies>
     </PropertyGroup>
-
-    <ItemGroup Condition="'$(CoreRTMode)' == 'High'">
-        <IlcArg Include="--removefeature:EventSource"/>
-        <IlcArg Include="--removefeature:FrameworkStrings"/>
-    </ItemGroup>
 
     <ItemGroup>
         <RdXmlFile Include="rd.xml"/>
