--- a/src/Sor/SorDk/SorDk.csproj
+++ b/src/Sor/SorDk/SorDk.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFrameworks>netcoreapp3.1;net4.8</TargetFrameworks>
+        <TargetFrameworks>net5.0;net4.8</TargetFrameworks>
         <MonoGamePlatform>DesktopGL</MonoGamePlatform>
     </PropertyGroup>
 
